# Image-Classification-Comparison

./: .gitignore  README.md  pyproject.toml
outputs/predictions/: run1.txt  run2.txt  run3.txt
src/image_classification_comparison/: GIST.py  __main__.py  run1.py  run2.py  run3.py
src/image_classifier_comparison/: __main__.py  constants.py  run1.py  run2.py  run3.py
