[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-classification-comparison"
version = "1"
readme = "README.md"
dependencies = [
    "imageio==2.33.1",
    "joblib==1.3.2",
    "numpy==1.26.3",
    "opencv-python==4.9.0.80",
    "pandas==2.1.4",
    "pillow==10.2.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.4"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
my-package-cli = "image_classification_comparison.__main__:main"
